@@ -18,6 +18,11 @@ persistent=no
 disable=locally-disabled,locally-enabled,missing-docstring,useless-object-inheritance
 
 
+[BASIC]
+# Allow longer test method names in legacy PyLint
+method-rgx=[a-z_][a-z0-9_]{2,80}$
+
+
 [REPORTS]
 
 # Tells whether to display a full report or only the messages
